--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "react-native": "^0.21.0",
-    "react-native-tabbar": "^0.3.5"
+    "react-native-tabbar": "^0.3.5",
+    "react-native-device-info": "^0.8.1",
+    "react-native-vector-icons": "^1.0.4"
   }
 }
