--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react-native": "^0.21.0",
-    "react-native-tabbar": "^0.3.5",
+    "react-native": "^0.22.2",
     "react-native-device-info": "^0.8.1",
+    "react-native-router-flux": "^3.2.5",
+    "react-native-tabbar": "^0.3.5",
     "react-native-vector-icons": "^1.0.4"
   }
 }
